--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,13 +22,13 @@
         @apply flex flex-col items-center justify-center
     }
     .main-page-layout {
-        @apply flex h-screen p-5 pt-0 pb-2.5 lg:p-24 lg:pt-0 lg:pb-20
+        @apply flex h-full p-5 pt-0 pb-2.5 lg:p-24 lg:pt-0 lg:pb-20 lg:h-screen
     }
 }
 
 @layer components {
     .card {
-        @apply flex h-48 w-96 mr-4 lg:mr-0 lg:mb-10 border border-solid rounded-2xl shadow-sm lg:h-48 lg:w-full cursor-pointer
+        @apply flex h-48 w-72 mr-4 lg:mr-0 lg:mb-10 border border-solid rounded-2xl shadow-sm lg:h-48 lg:w-full cursor-pointer
     }
     .footer {
         @apply bottom-0 left-0 flex items-center justify-center w-screen
