--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,7 +28,7 @@
 
 @layer components {
     .card {
-        @apply flex h-48 w-72 mr-4 lg:mr-0 lg:mb-10 border border-solid rounded-2xl shadow-sm lg:h-48 lg:w-full cursor-pointer
+        @apply flex h-48 w-72 mr-4 lg:mr-0 lg:mb-10 border border-solid rounded-2xl shadow-sm sm:w-80 lg:w-full cursor-pointer
     }
     .footer {
         @apply bottom-0 left-0 flex items-center justify-center w-screen
